fix: 修复悬浮工具栏折叠展开时的位置问题 | Fixed the position issue when the floating toolbar was collapsed and expanded.

--- a/style/module/element.less
+++ b/style/module/element.less
@@ -14,9 +14,11 @@
     // right: var(--custom-dock-width);
 
     width: var(--custom-dock-width);
+    height: auto;
     z-index: var(--custom-z-index-max);
 
-    line-height: @tool-height;
+    // line-height: @tool-height;
+    line-height: normal;
 
     // overflow: visible;
     // outline: 1px solid white;
